--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fvectors%2Fcute-panda&psig=AOvVaw0pO92XUJk-4sXiOR9ohz8z&ust=1677953063307000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCNC2p8eswP0CFQAAAAAdAAAAABAI.png"
+    alt = "An animation panda"
+    title = "Cute"
+    />
   </body>
 </html>
