--- a/index.html
+++ b/index.html
@@ -7,10 +7,38 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <img
-    src = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fvectors%2Fcute-panda&psig=AOvVaw0pO92XUJk-4sXiOR9ohz8z&ust=1677953063307000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCNC2p8eswP0CFQAAAAAdAAAAABAI.png"
-    alt = "An animation panda"
-    title = "Cute"
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Grosser_Panda.JPG/1200px-Grosser_Panda.JPG"
     />
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML Images</title>
+  </head>
+  <body>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Grosser_Panda.JPG/1200px-Grosser_Panda.JPG"
+    alt="A big panda"
+/>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML Images</title>
+  </head>
+  <body>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Grosser_Panda.JPG/1200px-Grosser_Panda.JPG"
+    alt="A big panda"
+    title="They exist to cheer us up"
+/>
   </body>
 </html>
